--- a/webpack/package.json
+++ b/webpack/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "react": "^16.11.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
