--- a/code88-employee/package.json
+++ b/code88-employee/package.json
@@ -13,6 +13,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-table": "^6.10.3",
     "typescript": "^3.7.2"
   },
   "scripts": {
